--- a/hair-styling.html
+++ b/hair-styling.html
@@ -108,7 +108,7 @@
                     <div class="main-menu__wrapper-inner">
                         <div class="main-menu__left">
                             <div class="main-menu__logo">
-                                <a href="index.html"><img style="width: 80px;" src="assets/images/My-images/logo.avif" alt=""></a>
+                                <a href="index.html"><img style="width: 80px;" src="assets/images/My-images/nav-logo.svg" alt=""></a>
                             </div>
                         </div>
                         <div class="main-menu__main-menu-box">
@@ -199,30 +199,18 @@
                             <div class="services-details-two__img">
                                 <img src="assets/images/My-images/hair-3.jpg" alt="">
                             </div>
-                            <h3 class="services-details-two__title-1">Hydro Therapy</h3>
-                            <p class="services-details-two__text-1">Lorem ipsum is simply free text used by copytyping
-                                refreshing. Neque porro est qui dolorem ipsum quia quaed inventore veritatis et quasi
-                                architecto beatae vitae dicta sunt explicabo. Aelltes port lacus quis enim var sed
-                                efficitur turpis gilla sed sit amet finibus eros. Lorem Ipsum is simply dummy text of
-                                the printing and typesetting industry. Lorem Ipsum has been the ndustry standard dummy
-                                text ever since the 1500s, when an unknown printer took a galley of type and scrambled
-                                it to make a type specimen book.</p>
-                            <p class="services-details-two__text-2">It has survived not only five centuries. Lorem Ipsum
-                                is
-                                simply dummy text of the new design printng and type setting Ipsum take a look at our
-                                round. When an unknown printer took a galley of type and scrambled it to make a type
-                                specimen book. It has survived not only five centuries, but also the leap into
-                                electronic typesetting.</p>
-                            <h3 class="services-details-two__title-2">What are the benefits of massages?</h3>
-                            <p class="services-details-two__text-3">Duis aute irure dolor in this helps to break up scar
-                                tissue that forms following reprehenderit in voluptate velit esse cillum.</p>
+                            <h3 class="services-details-two__title-1">Hair Dressing & Styling</h3>
+                            <p class="services-details-two__text-1">At Asuna Salon, we combine expert hairdressing with personalized styling to enhance your natural look. From precision cuts to elegant updos, each service is tailored to fit your face shape, hair type, and personal style—all in the warm, welcoming space of our home-based salon.</p>
+                            <p class="services-details-two__text-2">Whether you're looking for a routine refresh or a bold new change, our goal is to make you feel confident and beautiful. We use high-quality products and techniques to ensure long-lasting results while keeping your hair healthy and vibrant.</p>
+                            <h3 class="services-details-two__title-2">Why Choose Our Hair Services?</h3>
+                            <p class="services-details-two__text-3">Our hair treatments aren’t just about looks—they help restore your hair's strength, improve texture, and promote overall scalp health.</p>
                             <ul class="services-details-two__points list-unstyled">
                                 <li>
                                     <div class="icon">
                                         <span class="fa fa-check"></span>
                                     </div>
                                     <div class="text">
-                                        <p>Before your deep tissue massagee such a touch</p>
+                                        <p>Customized haircuts and styling for all hair types.</p>
                                     </div>
                                 </li>
                                 <li>
@@ -230,7 +218,7 @@
                                         <span class="fa fa-check"></span>
                                     </div>
                                     <div class="text">
-                                        <p>The massage therapist will warm up your muscles</p>
+                                        <p>Gentle handling and nourishing products for hair health.</p>
                                     </div>
                                 </li>
                                 <li>
@@ -238,7 +226,7 @@
                                         <span class="fa fa-check"></span>
                                     </div>
                                     <div class="text">
-                                        <p>It’s not unusual elit esse cillum eu fugiat</p>
+                                        <p>Relaxing experience in a quiet, home-based setting.</p>
                                     </div>
                                 </li>
                                 <li>
@@ -246,7 +234,7 @@
                                         <span class="fa fa-check"></span>
                                     </div>
                                     <div class="text">
-                                        <p>Duis aute irure dolor in in voluptate</p>
+                                        <p>Perfect for everyday care or special occasions.</p>
                                     </div>
                                 </li>
                             </ul>
@@ -254,55 +242,48 @@
                                 <div class="accrodion-grp" data-grp-name="faq-one-accrodion">
                                     <div class="accrodion">
                                         <div class="accrodion-title">
-                                            <h4>What is the right spa for me?</h4>
+                                            <h4>What hairstyles do you specialize in?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
-                                                <p>There are many variations of passages of available but the majority
-                                                    have in that some form by injected randomised words which don’t look
-                                                    even as slightly believable now.</p>
-                                            </div><!-- /.inner -->
+                                                <p>We offer everything from classic trims to modern cuts, layered styles, curls, and sleek finishes—each service is customized to your preference.</p>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="accrodion active">
                                         <div class="accrodion-title">
-                                            <h4>Do they offer spa treatments for men?</h4>
+                                            <h4>Can I get my hair styled for an event?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
-                                                <p>There are many variations of passages of available but the majority
-                                                    have in that some form by injected randomised words which don’t look
-                                                    even as slightly believable now.</p>
-                                            </div><!-- /.inner -->
+                                                <p>Absolutely! Whether it's a wedding, party, or photoshoot, we provide elegant styling to match the occasion and ensure you look your best.</p>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="accrodion">
                                         <div class="accrodion-title">
-                                            <h4>Should I eat before a massage?</h4>
+                                            <h4>Do you offer consultations before styling?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
-                                                <p>There are many variations of passages of available but the majority
-                                                    have in that some form by injected randomised words which don’t look
-                                                    even as slightly believable now.</p>
-                                            </div><!-- /.inner -->
+                                                <p>Yes, we always start with a short consultation to understand your hair goals, lifestyle, and preferences so we can achieve the perfect result.</p>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="accrodion">
                                         <div class="accrodion-title">
-                                            <h4>Should I shower before a treatment?</h4>
+                                            <h4>How often should I trim my hair?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
-                                                <p>There are many variations of passages of available but the majority
-                                                    have in that some form by injected randomised words which don’t look
-                                                    even as slightly believable now.</p>
-                                            </div><!-- /.inner -->
+                                                <p>We recommend a trim every 6–8 weeks to keep your hair healthy and maintain your desired style without split ends.</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -348,9 +329,9 @@
                                     <h4 class="footer-widget__title">Timing</h4>
                                 </div>
                                 <ul class="footer-widget__timing-list list-unstyled">
-                                    <li>Monday: 9:00 to 6:00</li>
-                                    <li>Tuesday to Friday: 8:00 to 19:00</li>
-                                    <li>Saturday: 8:00 to 3:30</li>
+                                    <li>Monday & Friday: Closed</li>
+                                    <li>Tues-Thur: 09:30am - 06:30pm</li>
+                                    <li>Sat & Sun: 10:00am - 06:30pm</li>
                                 </ul>
                             </div>
                         </div>
