--- a/head-spa.html
+++ b/head-spa.html
@@ -108,7 +108,7 @@
                     <div class="main-menu__wrapper-inner">
                         <div class="main-menu__left">
                             <div class="main-menu__logo">
-                                <a href="index.html"><img style="width: 80px;" src="assets/images/My-images/logo.avif" alt=""></a>
+                                <a href="index.html"><img style="width: 80px;" src="assets/images/My-images/nav-logo.svg" alt=""></a>
                             </div>
                         </div>
                         <div class="main-menu__main-menu-box">
@@ -352,9 +352,9 @@
                                     <h4 class="footer-widget__title">Timing</h4>
                                 </div>
                                 <ul class="footer-widget__timing-list list-unstyled">
-                                    <li>Monday: 9:00 to 6:00</li>
-                                    <li>Tuesday to Friday: 8:00 to 19:00</li>
-                                    <li>Saturday: 8:00 to 3:30</li>
+                                    <li>Monday & Friday: Closed</li>
+                                    <li>Tues-Thur: 09:30am - 06:30pm</li>
+                                    <li>Sat & Sun: 10:00am - 06:30pm</li>
                                 </ul>
                             </div>
                         </div>
