--- a/beauty-treatments.html
+++ b/beauty-treatments.html
@@ -108,7 +108,7 @@
                     <div class="main-menu__wrapper-inner">
                         <div class="main-menu__left">
                             <div class="main-menu__logo">
-                                <a href="index.html"><img style="width: 80px;" src="assets/images/My-images/logo.avif" alt=""></a>
+                                <a href="index.html"><img style="width: 80px;" src="assets/images/My-images/nav-logo.svg" alt=""></a>
                             </div>
                         </div>
                         <div class="main-menu__main-menu-box">
@@ -199,30 +199,18 @@
                             <div class="services-details-two__img">
                                 <img src="assets/images/My-images/beauty-1.jpg" alt="">
                             </div>
-                            <h3 class="services-details-two__title-1">Body Treatments</h3>
-                            <p class="services-details-two__text-1">Lorem ipsum is simply free text used by copytyping
-                                refreshing. Neque porro est qui dolorem ipsum quia quaed inventore veritatis et quasi
-                                architecto beatae vitae dicta sunt explicabo. Aelltes port lacus quis enim var sed
-                                efficitur turpis gilla sed sit amet finibus eros. Lorem Ipsum is simply dummy text of
-                                the printing and typesetting industry. Lorem Ipsum has been the ndustry standard dummy
-                                text ever since the 1500s, when an unknown printer took a galley of type and scrambled
-                                it to make a type specimen book.</p>
-                            <p class="services-details-two__text-2">It has survived not only five centuries. Lorem Ipsum
-                                is
-                                simply dummy text of the new design printng and type setting Ipsum take a look at our
-                                round. When an unknown printer took a galley of type and scrambled it to make a type
-                                specimen book. It has survived not only five centuries, but also the leap into
-                                electronic typesetting.</p>
-                            <h3 class="services-details-two__title-2">What are the benefits of massages?</h3>
-                            <p class="services-details-two__text-3">Duis aute irure dolor in this helps to break up scar
-                                tissue that forms following reprehenderit in voluptate velit esse cillum.</p>
+                            <h3 class="services-details-two__title-1">Beauty Treatment & Waxing</h3>
+                            <p class="services-details-two__text-1">At Asuna Salon, we believe beauty should feel effortless. Our beauty treatments and waxing services are designed to leave your skin smooth, fresh, and glowing—all in the relaxed comfort of our home-based space. From gentle facial care to precision waxing, we ensure a calming and hygienic experience every time.</p>
+                            <p class="services-details-two__text-2">We use high-quality, skin-friendly products to reduce irritation and enhance results. Whether you're prepping for an event or simply treating yourself, our services are tailored to suit your needs and make you feel your absolute best.</p>
+                            <h3 class="services-details-two__title-2">Why Choose Our Beauty Services?</h3>
+                            <p class="services-details-two__text-3">Our treatments not only refine your appearance—they help promote healthy skin, boost confidence, and create a moment of self-care in your day.</p>
                             <ul class="services-details-two__points list-unstyled">
                                 <li>
                                     <div class="icon">
                                         <span class="fa fa-check"></span>
                                     </div>
                                     <div class="text">
-                                        <p>Before your deep tissue massagee such a touch</p>
+                                        <p>Professional waxing with minimal discomfort.</p>
                                     </div>
                                 </li>
                                 <li>
@@ -230,7 +218,7 @@
                                         <span class="fa fa-check"></span>
                                     </div>
                                     <div class="text">
-                                        <p>The massage therapist will warm up your muscles</p>
+                                        <p>Facial care that hydrates, cleanses, and refreshes.</p>
                                     </div>
                                 </li>
                                 <li>
@@ -238,7 +226,7 @@
                                         <span class="fa fa-check"></span>
                                     </div>
                                     <div class="text">
-                                        <p>It’s not unusual elit esse cillum eu fugiat</p>
+                                        <p>Private, peaceful setting with personalized care.</p>
                                     </div>
                                 </li>
                                 <li>
@@ -246,7 +234,7 @@
                                         <span class="fa fa-check"></span>
                                     </div>
                                     <div class="text">
-                                        <p>Duis aute irure dolor in in voluptate</p>
+                                        <p>Perfect for maintaining smooth, radiant skin.</p>
                                     </div>
                                 </li>
                             </ul>
@@ -254,55 +242,48 @@
                                 <div class="accrodion-grp" data-grp-name="faq-one-accrodion">
                                     <div class="accrodion">
                                         <div class="accrodion-title">
-                                            <h4>What is the right spa for me?</h4>
+                                            <h4>Is waxing painful?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
-                                                <p>There are many variations of passages of available but the majority
-                                                    have in that some form by injected randomised words which don’t look
-                                                    even as slightly believable now.</p>
-                                            </div><!-- /.inner -->
+                                                <p>We use gentle techniques and soothing products to minimize discomfort. Most clients find the experience quick and manageable.</p>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="accrodion active">
                                         <div class="accrodion-title">
-                                            <h4>Do they offer spa treatments for men?</h4>
+                                            <h4>Do you offer treatments for sensitive skin?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
-                                                <p>There are many variations of passages of available but the majority
-                                                    have in that some form by injected randomised words which don’t look
-                                                    even as slightly believable now.</p>
-                                            </div><!-- /.inner -->
+                                                <p>Yes! We carefully select products suited for sensitive skin and adjust each treatment based on your comfort and needs.</p>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="accrodion">
                                         <div class="accrodion-title">
-                                            <h4>Should I eat before a massage?</h4>
+                                            <h4>How long do waxing results last?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
-                                                <p>There are many variations of passages of available but the majority
-                                                    have in that some form by injected randomised words which don’t look
-                                                    even as slightly believable now.</p>
-                                            </div><!-- /.inner -->
+                                                <p>Waxing typically lasts 3 to 4 weeks, depending on your hair growth cycle. Regular visits help maintain smoother skin longer.</p>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="accrodion">
                                         <div class="accrodion-title">
-                                            <h4>Should I shower before a treatment?</h4>
+                                            <h4>Can I combine waxing with other beauty services?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
-                                                <p>There are many variations of passages of available but the majority
-                                                    have in that some form by injected randomised words which don’t look
-                                                    even as slightly believable now.</p>
-                                            </div><!-- /.inner -->
+                                                <p>Absolutely! We’re happy to create a custom session that includes waxing, facials, and more—just let us know your preferences when booking.</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -348,9 +329,9 @@
                                     <h4 class="footer-widget__title">Timing</h4>
                                 </div>
                                 <ul class="footer-widget__timing-list list-unstyled">
-                                    <li>Monday: 9:00 to 6:00</li>
-                                    <li>Tuesday to Friday: 8:00 to 19:00</li>
-                                    <li>Saturday: 8:00 to 3:30</li>
+                                    <li>Monday & Friday: Closed</li>
+                                    <li>Tues-Thur: 09:30am - 06:30pm</li>
+                                    <li>Sat & Sun: 10:00am - 06:30pm</li>
                                 </ul>
                             </div>
                         </div>
