--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
                         <div class="col-xl-6 col-lg-6">
                             <div class="testimonial-one__left">
                                 <div class="section-title text-left">
-                                    <span class="section-title__tagline">Customer Reviews</span>
+                                    <span class="section-title__tagline">Google Reviews</span>
                                     <h2 class="section-title__title">What They’re Talking
                                         About Us</h2>
                                 </div>
